checkpoint: save active working files on dev
