# docs/swagger.json
@@ -808,6 +808,73 @@
                 }
             }
         },
+        "/api/telegram/ping": {
+            "get": {
+                "description": "Pings telegram to ensure site is reachable",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Telegram"
+                ],
+                "summary": "Check Telegram availability",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/telegram.PingResponse"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/telegram/userinfo": {
+            "get": {
+                "description": "Fetches detailed user information for a given Telegram username",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "Telegram"
+                ],
+                "summary": "Get Telegram user information",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Telegram username",
+                        "name": "username",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/telegram.UserInfoResponse"
+                        }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "type": "object",
+                            "additionalProperties": {
+                                "type": "string"
+                            }
+                        }
+                    }
+                }
+            }
+        },
         "/api/x/ping": {
             "get": {
                 "description": "Pings x.com to ensure site is reachable",
@@ -3017,6 +3084,18 @@
                     "$ref": "#/definitions/snapchat.UserInfo"
                 }
             }
+        },
+        "telegram.PingResponse": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string",
+                    "example": "Pong"
+                }
+            }
+        },
+        "telegram.UserInfoResponse": {
+            "type": "object"
         },
         "x.PingResponse": {
             "type": "object",
