# internal/api/telegram/models.go
@@ -1,0 +1,10 @@
+package telegram
+
+type PingResponse struct {
+	Message string `json:"message" example:"Pong"`
+}
+
+// UserInfoResponse represents the parsed user info from Telegram
+type UserInfoResponse struct {
+	// TODO: Define response fields for Telegram
+}
